# package_etl

./: Pipeline_using_scrapping.ipynb  README.md  __init__.py  cocoa.db  pyproject.toml  requirements.txt
anomalie/: __init__.py
data_export/: cocoa.csv
encodage/: methode_encodage.py
etl_package/: __init__.py
etl_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
etl_package/anomalie/: z_score.py
etl_package/chargement/: loader.py
etl_package/encodage/: __init__.py  methode_encodage.py
etl_package/imputation/: imputer.py
etl_package/module_exploration/: valeurs_manquantes.py
etl_package/remplacement/: remplacer.py
etl_package/transformation/: normalisation.py
extraction/: webscrapping.py
feature_engineering/: __init__.py  feature_derivation.py
imputation/: __init__.py  imputation_supervisee.py  imputer.py
module_exploration/: doublons.py  valeurs_manquantes.py
nettoyage/: gestion_outliers.py
remplacement/: __init__.py  remplacer.py
test_package/: test.ipynb
tests/: test_extract.py
transformation/: normalisation.py  standardisation_z_score.py  type_colonne.py
