

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-package"
version = "0.1.0"
description = "Un package ETL modulaire pour pipeline ETL sur des données."
authors = [
    { name = "Mozart Codjo", email = "codjomozart@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "sqlalchemy>=1.4",
    "pymongo>=4.0",
    "openpyxl>=3.0",
    "scikit-learn>=1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_package*"]
